/docs e script para gerar
