# services/gateway/app/Http/Controllers/Controller.php
@@ -6,5 +6,14 @@ use Laravel\Lumen\Routing\Controller as BaseController;
 
 class Controller extends BaseController
 {
-    // 
+    /**
+     * @OA\Info(
+     *   title="eSapiens Challenge API",
+     *   version="1.0",
+     *   @OA\Contact(
+     *     email="guihalves20@gmail.com",
+     *     name="Guilherme Alves"
+     *   )
+     * )
+     */
 }
